[package]

name = "rope"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Ropes in Rust"
documentation = "http://www.rust-ci.org/epsilonz/rope.rs/doc/rope/"
keywords = ["data-structures", "persistent", "ropes", "strings", "text"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/rope.rs"

[lib]
name = "rope"
path = "src/lib.rs"

[dependencies]

epsilonz_algebra = "*"
fingertree = "*"
